--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ var geo;
 					return m;
 				}
 			});
-		//geo.addTo(map);
+		geo.addTo(map);
 
 		var rdata = _.map(data.locs, function(v,k) {
 			var m = L.marker(v);
