--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 	width: 100%;
 	height: 100%;
 }
+.leaflet-panel-layers-item{
+	font-size: 14px;
+	font-weight: bold;
+	padding: 2px;
+}
+.leaflet-panel-layers-item.active {
+	background: orange;
+}
 </style>
 </head> 	
 <body>
@@ -25,17 +33,49 @@
 <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet-src.js"></script>
 <!-- <script src="https://unpkg.com/leaflet.timeline@1.2.1/dist/leaflet.timeline.js"></script> -->
 <script src="https://unpkg.com/leaflet-panel-layers@1.2.2/dist/leaflet-panel-layers.src.js"></script>
+<script src="https://unpkg.com/leaflet.heat@0.2.0/dist/leaflet-heat.js"></script>
+<!-- <script src="https://unpkg.com/chroma-js@1.3.7/chroma.js"></script> -->
 <script>
 
-var map = new L.Map('map', {
-		zoom: 13,
+var elements = {
+	//'Ammonio': 1,		//0.1
+	'Arsenico': 1,		//0.5
+	//'Bicarbonato': 1,	//140.12
+	'Calcio': 1,			//34.8
+	//'Cloro residuo':1,	//0.03
+	'Cloruro': 1,		//0.6
+	//'ConducibilitÃ': 1,	//226
+	//'Durezza': 1,		//13
+	//'Enterococchi': 1,	//0
+	//'Escherichia': 1,	//0
+	'Fluoruro': 1,		//0.09
+	'Magnesio': 1,		//10.8
+	'Manganese': 1,		//0.5
+	'Nitrato': 1,		//2.8
+	//'Nitriti': 1,		//0.02
+	'Potassio': 1,		//0.38
+	//'Residuo fisso 180Â°':1,	//144.64000000000001
+	'Sodio': 1,			//0.5
+	'Solfato': 1,		//11.7
+	//'TorbiditÃ': 1,		//0.18
+	//'pH': 1,			//8
+};
+
+//var osm = L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'),
+var osm = L.tileLayer('http://{s}.tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png'),
+	map = new L.Map('map', {
+		zoom: 12,
+		maxZoom: 12,
+		minZoom: 10,
 		center: new L.latLng([46.07,11.1]),
-		layers: L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png')
+		layers: osm
 	});
 
 	var url = "https://api.apify.com/v1/execs/KTFWTkmxttzFs4SgH/results?simplified=1";
 
 	var geo;
+
+	var panel = L.control.panelLayers().addTo(map);
 
 	$.getJSON(url, function(json) {
 
@@ -43,17 +83,20 @@ var map = new L.Map('map', {
 
 		geo = L.geoJSON(null,{
 				pointToLayer: function(f, latlng) {
-					var m = L.circleMarker(latlng,{ radius: 10 });
+					var m = L.circleMarker(latlng);
 					m.bindPopup(JSON.stringify(f.properties));
 					return m;
 				}
 			});
-		geo.addTo(map);
 
-		var rdata = _.map(data.locs, function(v,k) {
-			var m = L.marker(v);
+		//geo.addTo(map);
+		panel.addOverlay({
+			name: 'Original Points',
+			layer: geo
+		})
 
-			var point = m.toGeoJSON();
+		var points = _.map(data.locs, function(v,k) {
+			var point = L.marker(v).toGeoJSON();
 			point.properties = {
 				name: data.names[k],
 				date: data.dates[k].split('-').reverse().join('-'),
@@ -61,10 +104,70 @@ var map = new L.Map('map', {
 			};
 			
 			geo.addData(point);
+
+			return point;
 		});
 
-		var geojson = geo.toGeoJSON();
+		for(var e in elements) {
+			if(!elements[e]) continue;
+			
+			var max = 1;
+
+			var grad = {};
+
+			var heatPoints = _.map(points, function(p) {
+				
+				var cc = p.geometry.coordinates,
+					val = p.properties.values[ e ];
+				
+				//max = val>1 ? 100 : 1;
+				//
+				val = val>1 ? val/100 : val;
+
+				//console.log(e, max, val);
+
+				return [cc[1], cc[0], Math.round(val,4) ];
+			});
+
+			/* CUSTOM gradient COLOR SCALE using chroma.js
+			var values = _.map(heatPoints, function(p) {
+				return p[2];
+			});
+			//var spect = 'Spectral';
+			var spect = 'YlGnBu';
+			var limit = 'logarithmic';
+			//var limit = 'quantiles';
+			var scale = chroma.scale(spect).domain(values, 10, limit);
+			//var scale = chroma.scale(['lightyellow', 'navy']).domain([0, max], 7, 'log');
+			var gradCount = _.range(0,max, 0.01);
+			_.map(gradCount, function(i) {
+				grad[ i ] = scale(i).hex()
+			});	
+			console.log(e, values, gradCount, grad);
+			*/
+
+
+			var heat = L.heatLayer(heatPoints, {
+				radius: 40,
+				minOpacity: 1,
+				blur: 100,
+				//gradient: grad, //example: {0: 'red', 0.5: 'lime', 1: 'yellow'},
+				max: max
+			})
+
+			if(e=='Arsenico')
+				heat.addTo(map);
+
+			//panel.addOverlay({
+			panel.addBaseLayer({
+				name: e,
+				layer: heat
+			});
+		}
+
+		
 /*
+		var geojson = geo.toGeoJSON();
         var timelineControl = L.timelineSliderControl({
           //formatOutput: function(date) {
           //	console.log(date)
