--- a/index.html
+++ b/index.html
@@ -90,14 +90,16 @@ var osm = L.tileLayer('http://{s}.tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png', 
 		geo = L.geoJSON(null,{
 				pointToLayer: function(f, latlng) {
 					var m = L.circleMarker(latlng, {radius: 5, style: {fill:true,fillOpacity: 1,opacity:1}});
-					m.bindPopup(JSON.stringify(f.properties));
+					var props = _.pick(f.properties.values, _.keys(elements));
+					
+					m.bindPopup('<pre>'+JSON.stringify(props,null,' ').replace(/[\{\}"]/g,'')+'</pre>');
 					return m;
 				}
 			});
 
 		//geo.addTo(map);
 		panel.addOverlay({
-			name: 'Original Points',
+			name: 'Sorgenti campionate',
 			layer: geo
 		})
 
