--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ var osm = L.tileLayer('http://{s}.tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png', 
 					var m = L.circleMarker(latlng, {radius: 5, style: {fill:true,fillOpacity: 1,opacity:1}});
 					var props = _.pick(f.properties.values, _.keys(elements));
 					
-					m.bindPopup('<pre>'+JSON.stringify(props,null,' ').replace(/[\{\}"]/g,'')+'</pre>');
+					m.bindPopup('<pre>'+JSON.stringify(props,null,' ').replace(/[\{\}"]/g,'')+'</pre><label>valori in microg/l</label>');
 					return m;
 				}
 			});
